--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <version>2.4</version>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
