--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -3,39 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <name>oap-storage</name>
+    <artifactId>oap-storage</artifactId>
 
     <parent>
         <groupId>oap</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
-
-    <artifactId>oap-storage</artifactId>
-
-    <name>oap-storage</name>
-    <inceptionYear>2015</inceptionYear>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-replication</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
-
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.6</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 </project>
