--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -9,20 +9,21 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.15</version>
+        <version>1.0.16</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-replication</artifactId>
-            <version>1.0.15</version>
-        </dependency>
+            <artifactId>oap-stdlib</artifactId>
+            <version>1.0.16</version>
+         </dependency>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-stdlib</artifactId>
-            <version>1.0.15</version>
+            <artifactId>oap-json</artifactId>
+            <version>1.0.16</version>
          </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
