--- a/oap-application/pom.xml
+++ b/oap-application/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.0.17</version>
+        <version>1.1.0</version>
     </parent>
 
     <dependencies>
@@ -46,6 +46,11 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-http</artifactId>
             <version>${parent.version}</version>
         </dependency>
         <dependency>
