--- a/oap-json/pom.xml
+++ b/oap-json/pom.xml
@@ -43,9 +43,20 @@
             <artifactId>oap-stdlib</artifactId>
             <version>${parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.jasonclawson</groupId>
+            <artifactId>jackson-dataformat-hocon</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
