--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -1,16 +1,14 @@
 {
   name = "m1"
-  services = [
-    {
+  services {
+    ServiceOne {
       implementation = "oap.application.ServiceOne"
-      name = "ServiceOne"
       parameters.i = 2
-    },
-    {
+    }
+    hello {
       implementation = "oap.application.RemoteHello"
-      name = "hello"
       remoteUrl = "http://localhost:8880/remote/"
       remoteName = "ServiceTwo"
     }
-  ]
+  }
 }
