--- a/oap-application/src/test/resources/oap/application/modules/m2.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m2.conf
@@ -1,23 +1,21 @@
 {
   name = "m2"
   dependsOn = [ "m1" ]
-  services = [
-    {
+  services {
+    ServiceTwo {
       implementation = "oap.application.ServiceTwo"
-      name = "ServiceTwo"
       parameters {
         j =  1
         one = "@service:ServiceOne"
       }
       supervision.supervise = true
-    },
-    {
+    }
+    ServiceScheduled {
       implementation = "oap.application.ServiceScheduled"
-      name = "ServiceScheduled"
       supervision {
         schedule = true
         delay = 1
       }
     }
-  ]
+  }
 }
