oap-ws:services,handlers: list -> map

--- a/oap-ws/src/test/resources/oap/ws/ws.conf
+++ b/oap-ws/src/test/resources/oap/ws/ws.conf
@@ -1,14 +1,12 @@
 {
-  services = [
-    {
-      context = "hocon/x/v/math"
-      service = "math"
+  services {
+    hocon/x/v/math {
+      service = math
     }
-  ]
-  handlers = [
-    {
-      context = "hocon/x/h"
-      service = "handler"
+  }
+  handlers {
+    hocon/x/h {
+      service = handler
     }
-  ]
+  }
 }
