--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -5,9 +5,8 @@
       implementation = "oap.application.ServiceOne"
       parameters.i = 2
     }
-  }
-  interfaces {
     hello {
+      remote = true
       implementation = "oap.application.RemoteHello"
       remoteUrl = "http://localhost:8880/remote/"
       remoteName = "ServiceTwo"
