--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -3,10 +3,12 @@
   services {
     ServiceOne {
       implementation = "oap.application.ServiceOne"
-      parameters.i = 2
+      parameters {
+        i = 2
+      }
     }
     hello {
-      implementation = "oap.application.RemoteHello"
+      implementation = "oap.application.Hello"
       remoteUrl = "http://localhost:8880/remote/"
       remoteName = "ServiceTwo"
     }
