--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -7,7 +7,9 @@
         port = 8880
         workers = 500
       }
-      supervision.supervise = true
+      supervision {
+        supervise = true
+      }
     }
   }
 }
