--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -4,8 +4,12 @@
   services {
     oap-ws-webservices {
       implementation = oap.ws.WebServices
-      parameters.server = "@service:oap-http-server"
-      supervision.supervise = true
+      parameters {
+        server = "@service:oap-http-server"
+      }
+      supervision {
+        supervise = true
+     }
     }
   }
 }
