ref: Metrics: static -> service

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -1,15 +1,16 @@
 {
   name = oap-ws
-  dependsOn = [oap-http]
+  dependsOn = [oap-http, oap-metrics]
   services {
     oap-ws-webservices {
       implementation = oap.ws.WebServices
       parameters {
         server = "@service:oap-http-server"
+        metrics = "@service:oap-default-metrics"
       }
       supervision {
         supervise = true
-     }
+      }
     }
   }
 }
