ref: Metrics: static -> service

--- a/oap-metrics/src/main/resources/META-INF/oap-module.conf
+++ b/oap-metrics/src/main/resources/META-INF/oap-module.conf
@@ -4,5 +4,8 @@
     oap-default-metrics {
       implementation = oap.metrics.Metrics
     }
+    oap-jvm-metrics {
+      implementation = oap.metrics.JvmMetrics
+    }
   }
 }
