--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -1,12 +1,11 @@
 {
   name = oap-ws
-  dependsOn = [oap-http, oap-metrics]
+  dependsOn = [oap-http]
   services {
     oap-ws-webservices {
       implementation = oap.ws.WebServices
       parameters {
         server = "@service:oap-http-server"
-        metrics = "@service:oap-default-metrics"
       }
       supervision {
         supervise = true
