--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -6,6 +6,7 @@
       parameters {
         i = 2 ms
       }
+      supervision.delay = 5ms
     }
     hello {
       implementation = "oap.application.Hello"
