ws: configuration: localHostOnly

--- a/oap-ws/src/test/resources/oap/ws/ws.conf
+++ b/oap-ws/src/test/resources/oap/ws/ws.conf
@@ -2,11 +2,13 @@
   services {
     hocon/x/v/math {
       service = math
+      local_host_only = true
     }
   }
   handlers {
     hocon/x/h {
       service = handler
+      local_host_only = true
     }
   }
 }
