--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.2.25</version>
+    <version>1.2.26</version>
 
     <name>oap</name>
 
@@ -48,6 +48,7 @@
         <module>oap-storage</module>
         <module>oap-etl</module>
         <module>oap-logstream</module>
+        <module>oap-maven</module>
     </modules>
 
     <repositories>
