--- a/oap-cli/pom.xml
+++ b/oap-cli/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.2.26</version>
+        <version>1.4.0</version>
     </parent>
 
     <build>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
