--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -33,19 +33,19 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.2.26</version>
+        <version>1.4.0</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
          </dependency>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
          </dependency>
 
         <dependency>
