--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>oap-stdlib</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
     </dependencies>
 </project>
