--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -33,13 +33,18 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.5.5</version>
+        <version>1.5.6</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-metrics</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
