--- a/oap-application/pom.xml
+++ b/oap-application/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>maven-project</artifactId>
             <version>2.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.40</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
