--- a/oap-http/pom.xml
+++ b/oap-http/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>1.6.54</version>
+        <version>1.6.55</version>
     </parent>
     <dependencies>
         <dependency>
@@ -62,8 +62,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.1</version>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
