--- a/oap-metrics/pom.xml
+++ b/oap-metrics/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.6.75</version>
+        <version>1.6.76</version>
     </parent>
 
     <dependencies>
@@ -48,9 +48,9 @@
             <version>${metrics.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.influxdb</groupId>
+            <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
-            <version>influxdb-java-2.0</version>
+            <version>2.1</version>
         </dependency>
     </dependencies>
 </project>
