--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
         <testng.version>6.9.9</testng.version>
+        <assertj.version>3.3.0</assertj.version>
         <guava.version>18.0</guava.version>
         <logback.version>1.1.3</logback.version>
         <httpcomponents.version>4.4.4</httpcomponents.version>
@@ -185,6 +186,11 @@
                     <artifactId>junit</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
         </dependency>
     </dependencies>
 
