--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -4,8 +4,31 @@
     oap-http-server {
       implementation = oap.http.Server
       parameters {
-        port = 8880
         workers = 500
+      }
+      supervision {
+        supervise = true
+      }
+    }
+    plain-http-listener {
+      dependsOn = [oap-http-server]
+      implementation = oap.http.PlainHttpRequestListener
+      parameters {
+        port = 8880
+        httpServer = "@service:oap-http-server"
+      }
+      supervision {
+        supervise = true
+      }
+    }
+    secure-http-listener {
+      dependsOn = [oap-http-server]
+      implementation = oap.http.SecureHttpRequestListener
+      parameters {
+        port = 8980
+        httpServer = "@service:oap-http-server"
+        keystoreLocation = "server_keystore.jks"
+        keystorePassword = "123456"
       }
       supervision {
         supervise = true
