--- a/oap-ws/src/test/resources/oap/ws/ws.conf
+++ b/oap-ws/src/test/resources/oap/ws/ws.conf
@@ -2,13 +2,13 @@
   services {
     hocon/x/v/math {
       service = math
-      local_host_only = true
+      protocol = HTTP
     }
   }
   handlers {
     hocon/x/h {
       service = handler
-      local_host_only = true
+      protocol = HTTP
     }
   }
 }
