MP-653 Transform Listeners into simple runnables and closables; include locallistener into test configuration; use lombok for logging

--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -12,18 +12,18 @@
     }
     plain-http-listener {
       dependsOn = [oap-http-server]
-      implementation = oap.http.PlainHttpRequestListener
+      implementation = oap.http.PlainHttpListener
       parameters {
         port = 8880
         httpServer = "@service:oap-http-server"
       }
       supervision {
-        supervise = true
+        thread = true
       }
     }
     secure-http-listener {
       dependsOn = [oap-http-server]
-      implementation = oap.http.SecureHttpRequestListener
+      implementation = oap.http.SecureHttpListener
       parameters {
         port = 8980
         httpServer = "@service:oap-http-server"
@@ -31,7 +31,18 @@
         keystorePassword = "123456"
       }
       supervision {
-        supervise = true
+        thread = true
+      }
+    }
+    local-http-listener {
+      dependsOn = [oap-http-server]
+      implementation = oap.http.LocalHttpListener
+      parameters {
+        port = 9090
+        httpServer = "@service:oap-http-server"
+      }
+      supervision {
+        thread = true
       }
     }
   }
