Bind Remote to Https only; use localhost domain certificates.

--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -11,8 +11,10 @@
     }
     hello {
       implementation = "oap.application.Hello"
-      remoteUrl = "http://localhost:8880/remote/"
+      remoteUrl = "https://localhost:8980/remote/"
       remoteName = "ServiceTwo"
+      certificateLocation = "client_truststore.jks"
+      certificatePassword = "123456"
     }
   }
 }
