--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.9.16</version>
+    <version>1.9.17</version>
 
     <name>oap</name>
 
@@ -97,7 +97,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.19.1</version>
                 <configuration>
                     <argLine>
                         -ea -Xmx1000m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
@@ -108,7 +108,6 @@
                     <disableXmlReport>false</disableXmlReport>
                     <printSummary>true</printSummary>
                     <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
-                    <!--<forkMode>once</forkMode>-->
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <runOrder>balanced</runOrder>
                     <includes>
@@ -203,7 +202,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19</version>
+                        <version>2.19.1</version>
                         <configuration>
                             <argLine>
                                 -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx6G
@@ -220,6 +219,31 @@
                             <includes>
                                 <include>**/*Performance.*</include>
                             </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>observe-test-failure</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <argLine>
+                                -ea -Xmx1000m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
+                                -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
+                            </argLine>
+                            <testFailureIgnore>false</testFailureIgnore>
+                            <useFile>true</useFile>
+                            <disableXmlReport>false</disableXmlReport>
+                            <printSummary>true</printSummary>
+                            <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <runOrder>balanced</runOrder>
                         </configuration>
                     </plugin>
                 </plugins>
