+Config Refactor JsonAsserts, HttpAsserts

--- a/oap-http/src/main/resources/META-INF/oap-module.conf
+++ b/oap-http/src/main/resources/META-INF/oap-module.conf
@@ -15,7 +15,7 @@
       implementation = oap.http.PlainHttpListener
       parameters {
         port = 8880
-        httpServer = "@service:oap-http-server"
+        server = "@service:oap-http-server"
       }
       supervision {
         thread = true
@@ -26,7 +26,7 @@
       implementation = oap.http.SecureHttpListener
       parameters {
         port = 8980
-        httpServer = "@service:oap-http-server"
+        server = "@service:oap-http-server"
         keystoreLocation = "server_keystore.jks"
         keystorePassword = "123456"
       }
@@ -39,7 +39,7 @@
       implementation = oap.http.LocalHttpListener
       parameters {
         port = 9080
-        httpServer = "@service:oap-http-server"
+        server = "@service:oap-http-server"
       }
       supervision {
         thread = true
