--- a/oap-application/src/test/resources/oap/application/application.conf
+++ b/oap-application/src/test/resources/oap/application/application.conf
@@ -6,4 +6,6 @@
   }
 
   so.i2 = "100"
+
+  secure-http-listener.parameters.keystoreLocation = "src/test/resources/oap/application/server_keystore.jks"
 }
