--- a/oap-application/src/test/resources/oap/application/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/modules/m1.conf
@@ -13,7 +13,7 @@
       implementation = "oap.application.Hello"
       remoteUrl = "https://localhost:8980/remote/"
       remoteName = "ServiceTwo"
-      certificateLocation = "client_truststore.jks"
+      certificateLocation = "src/test/resources/oap/application/client_truststore.jks"
       certificatePassword = "123456"
     }
   }
