Sleep for configurable time if socket cannot be opened

--- a/oap-application/src/main/resources/META-INF/oap-module.conf
+++ b/oap-application/src/main/resources/META-INF/oap-module.conf
@@ -16,8 +16,8 @@
       parameters {
         port = 8980
         server = "@service:oap-http-server"
-        keystoreLocation = ""
-        keystorePassword = ""
+        keystoreLocation = "/etc/oap/keystore.jks"
+        keystorePassword = "changeit"
       }
       supervision {
         thread = true
