--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.10.6</version>
+    <version>1.10.7</version>
 
     <name>oap</name>
 
@@ -71,6 +71,7 @@
         <assertj.version>3.3.0</assertj.version>
         <guava.version>18.0</guava.version>
         <logback.version>1.1.3</logback.version>
+        <slf4j.version>1.7.13</slf4j.version>
         <httpcomponents.version>4.4.4</httpcomponents.version>
         <joda.version>2.9.2</joda.version>
         <metrics.version>3.1.2</metrics.version>
