Add initial Token and Login functionality

--- a/oap-security/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/src/main/resources/META-INF/oap-module.conf
@@ -7,12 +7,39 @@ services {
         }
         supervision.supervise = true
     }
+    token-storage {
+        implementation = oap.security.TokenStorage
+        parameters {
+            path = /var/lib/oap-security/tokens
+        }
+        supervision.supervise = true
+    }
+    auth-service {
+        implementation = oap.security.AuthService
+        parameters {
+            tokenStorage = "@service:token-storage"
+        }
+        supervision.supervise = true
+    }
     ws-organization {
        implementation = oap.security.OrganizationWS
        parameters {
-         campaignStorage = "@service:organization-storage"
+         organizationStorage = "@service:organization-storage"
        }
        dependsOn = [organization-storage]
+    }
+    ws-login {
+       implementation = oap.security.LoginWS
+       parameters {
+         organizationStorage = "@service:organization-storage"
+         salt = "oap-security"
+       }
+    }
+    ws-auth {
+       implementation = oap.security.AuthWS
+       parameters {
+         authService = "@service:auth-service"
+       }
     }
   }
 }
