--- a/oap-security/src/main/resources/META-INF/oap-ws.conf
+++ b/oap-security/src/main/resources/META-INF/oap-ws.conf
@@ -4,5 +4,13 @@
       service = ws-organization
       protocol = HTTP
     }
+    login {
+      service = ws-login
+      protocol = HTTP
+    }
+    auth {
+      service = ws-auth
+      protocol = HTTP
+    }
   }
 }
