--- a/oap-security/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/src/main/resources/META-INF/oap-module.conf
@@ -20,6 +20,7 @@ services {
             tokenStorage = "@service:token-storage"
         }
         supervision.supervise = true
+        dependsOn = [token-storage]
     }
     ws-organization {
        implementation = oap.security.OrganizationWS
@@ -34,12 +35,14 @@ services {
          organizationStorage = "@service:organization-storage"
          salt = "oap-security"
        }
+       dependsOn = [organization-storage]
     }
     ws-auth {
        implementation = oap.security.AuthWS
        parameters {
          authService = "@service:auth-service"
        }
+       dependsOn = [auth-service]
     }
   }
 }
