Make expiration configurable; expire token on get request

--- a/oap-security/src/main/resources/META-INF/oap-module.conf
+++ b/oap-security/src/main/resources/META-INF/oap-module.conf
@@ -18,6 +18,7 @@ services {
         implementation = oap.security.AuthService
         parameters {
             tokenStorage = "@service:token-storage"
+            expirationTime = 60
         }
         supervision.supervise = true
         dependsOn = [token-storage]
