--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <logback.version>1.1.3</logback.version>
         <slf4j.version>1.7.13</slf4j.version>
         <httpcomponents.version>4.4.4</httpcomponents.version>
+        <compress.version>1.10</compress.version>
         <joda.version>2.9.2</joda.version>
         <metrics.version>3.1.2</metrics.version>
         <jackson.version>2.7.1</jackson.version>
