add: oap-alert, oap-alert-slack

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
         <module>oap-maven</module>
         <module>oap-ws-cat</module>
         <module>oap-security</module>
+
+        <module>oap-alert</module>
+        <module>oap-alert-slack</module>
     </modules>
 
     <repositories>
