--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -2,19 +2,26 @@
   name = "m1"
   services {
     ServiceOne {
-      implementation = "oap.application.ServiceOne"
+      implementation = oap.application.ServiceOne
+      profile = required
       parameters {
         i = 2 ms
-        i2 = ${so.i2}
       }
       supervision.delay = 5ms
     }
     hello {
-      implementation = "oap.application.Hello"
+      implementation = oap.application.Hello
       remoteUrl = "https://localhost:8980/remote/"
-      remoteName = "ServiceTwo"
+      remoteName = ServiceTwo
       certificateLocation = "src/test/resources/oap/application/KernelTest/client_truststore.jks"
       certificatePassword = "123456"
     }
+    //    ServiceOptional {
+    //      implementation = oap.application.ServiceOne
+    //      profile = optional
+    //      parameters {
+    //        i = 1
+    //      }
+    //    }
   }
 }
