--- a/oap-application/src/test/resources/oap/application/KernelTest/application.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/application.conf
@@ -1,12 +1,14 @@
 {
-  ServiceTwo {
-    parameters {
-      j = ${a.b}
+  services {
+    ServiceTwo {
+      parameters {
+        j = ${a.b}
+      }
     }
+
+    ServiceOne.parameters.i2 = ${so.i2}
+
+    secure-http-listener.parameters.keystoreLocation = "src/test/resources/oap/application/KernelTest/server_keystore.jks"
+    secure-http-listener.parameters.keystorePassword = "123456"
   }
-
-  so.i2 = "100"
-
-  secure-http-listener.parameters.keystoreLocation = "src/test/resources/oap/application/KernelTest/server_keystore.jks"
-  secure-http-listener.parameters.keystorePassword = "123456"
 }
