--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -16,12 +16,12 @@
       certificateLocation = "src/test/resources/oap/application/KernelTest/client_truststore.jks"
       certificatePassword = "123456"
     }
-    //    ServiceOptional {
-    //      implementation = oap.application.ServiceOne
-    //      profile = optional
-    //      parameters {
-    //        i = 1
-    //      }
-    //    }
+    ServiceOptional {
+      implementation = oap.application.ServiceOne
+      profile = optional
+      parameters {
+        i = 1
+      }
+    }
   }
 }
