name conflict resolved

--- a/oap-application/src/test/resources/oap/application/KernelTest/application.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/application.conf
@@ -1,5 +1,5 @@
 {
-  profiles = [required]
+  profiles = [profileOne]
   services {
     ServiceTwo {
       parameters {
@@ -7,7 +7,7 @@
       }
     }
 
-    ServiceOne.parameters.i2 = ${so.i2}
+    ServiceOneP1.parameters.i2 = ${one.i2}
 
     secure-http-listener.parameters.keystoreLocation = "src/test/resources/oap/application/KernelTest/server_keystore.jks"
     secure-http-listener.parameters.keystorePassword = "123456"
