--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -1,9 +1,18 @@
 {
   name = "m1"
   services {
-    ServiceOne {
+    ServiceOneP2 {
       implementation = oap.application.ServiceOne
-      profile = required
+      profile = profileTwo
+      name = ServiceOne
+      parameters {
+        i = 1
+      }
+    }
+    ServiceOneP1 {
+      implementation = oap.application.ServiceOne
+      profile = profileOne
+      name = ServiceOne
       parameters {
         i = 2 ms
       }
@@ -15,13 +24,6 @@
       remoteName = ServiceTwo
       certificateLocation = "src/test/resources/oap/application/KernelTest/client_truststore.jks"
       certificatePassword = "123456"
-    }
-    ServiceOptional {
-      implementation = oap.application.ServiceOne
-      profile = optional
-      parameters {
-        i = 1
-      }
     }
   }
 }
