--- a/oap-application/pom.xml
+++ b/oap-application/pom.xml
@@ -30,6 +30,7 @@
     <name>oap-application</name>
     <artifactId>oap-application</artifactId>
     <packaging>maven-plugin</packaging>
+    <version>1.11.2</version>
 
     <parent>
         <groupId>oap</groupId>
