Add initial session store with cookies

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -6,8 +6,16 @@
       implementation = oap.ws.WebServices
       parameters {
         server = "@service:oap-http-server"
+        sessionManager = "@service:session-manager"
       }
       supervision {
+        supervise = true
+      }
+      dependsOn = [session-manager]
+    }
+    session-manager {
+    implementation = oap.ws.SessionManager
+    supervision {
         supervise = true
       }
     }
