Use guava cache for cookie/session storage; return session instead of cookie id from SESSION

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -14,8 +14,11 @@
       dependsOn = [session-manager]
     }
     session-manager {
-    implementation = oap.ws.SessionManager
-    supervision {
+      implementation = oap.ws.SessionManager
+      parameters {
+        expirationTime = 60
+      }
+      supervision {
         supervise = true
       }
     }
