Extend cookie support with domain, path, expiration

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -17,6 +17,8 @@
       implementation = oap.ws.SessionManager
       parameters {
         expirationTime = 60
+        cookieDomain = ""
+        cookiePath = "/"
       }
       supervision {
         supervise = true
