--- a/oap-ws/pom.xml
+++ b/oap-ws/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.12.3</version>
+        <version>1.12.4</version>
     </parent>
 
     <dependencies>
@@ -61,6 +61,11 @@
             <groupId>oap</groupId>
             <artifactId>oap-application</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap-ws-security</groupId>
+            <artifactId>oap-ws-security-domain</artifactId>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
