--- a/oap-ws/pom.xml
+++ b/oap-ws/pom.xml
@@ -63,6 +63,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>oap-ws-security</groupId>
+            <artifactId>oap-ws-security-domain</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>${httpcomponents.version}</version>
