Introduced profiles for https/local/plain http listeners

--- a/oap-ws-cat/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws-cat/src/main/resources/META-INF/oap-module.conf
@@ -3,6 +3,7 @@
   dependsOn = [oap-http]
   services {
     local-http-listener {
+      profile = http-local
       dependsOn = [oap-http-server]
       implementation = oap.http.LocalHttpListener
       parameters {
