--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -25,6 +25,7 @@
       }
     }
     plain-http-listener {
+      profile = http-plain
       implementation = oap.http.PlainHttpListener
       parameters {
         port = 8880
