--- a/oap-application/src/main/resources/META-INF/oap-module.conf
+++ b/oap-application/src/main/resources/META-INF/oap-module.conf
@@ -12,6 +12,7 @@
     }
     secure-http-listener {
       dependsOn = [oap-http-server]
+      profile = https
       implementation = oap.http.SecureHttpListener
       parameters {
         port = 8980
