Split application into application and remoting. This makes remoting configuration optional for applications
Removed remoting from kernel tests

Added tests for remoting

Fixed wrong file case

Fixed license typo

Bumped version

Fix test

Removed redundant module

Removed redundant module

Removed redundant module

--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.conf
@@ -1,9 +1,9 @@
 {
-  name = "oap-kernel"
+  name = "oap-remoting-server"
   dependsOn = ["oap-http"]
   services {
     remoting {
-      implementation = "oap.application.remote.Remote"
+      implementation = "oap.application.remoting.Remote"
       parameters {
         server = "@service:oap-http-server"
         context = "remote"
