--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.13.3</version>
+    <version>1.14.0</version>
 
     <name>oap</name>
 
@@ -46,6 +46,7 @@
         <module>oap-cli</module>
         <module>oap-http</module>
         <module>oap-ws</module>
+        <module>oap-remoting-server</module>
         <module>oap-application</module>
         <module>oap-storage</module>
         <module>oap-etl</module>
