classers in config

--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -15,6 +15,10 @@
       name = ServiceOne
       parameters {
         i = 2 ms
+        complex {
+          i = 2
+        }
+        complexes = [{i = 2}]
       }
       supervision.delay = 5ms
     }
