fixed deep serialization

--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -17,6 +17,11 @@
         i = 2 ms
         complex {
           i = 2
+          map = {
+            a {
+              i = 1
+            }
+          }
         }
         complexes = [{i = 2}]
       }
