--- a/oap-ws/pom.xml
+++ b/oap-ws/pom.xml
@@ -46,6 +46,12 @@
             <groupId>oap</groupId>
             <artifactId>oap-metrics</artifactId>
             <version>${project.parent.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>oap</groupId>
