--- a/oap-dictionary-maven/pom.xml
+++ b/oap-dictionary-maven/pom.xml
@@ -28,8 +28,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-dictionary</name>
-    <artifactId>oap-dictionary</artifactId>
+    <name>maven-oap-dictionary</name>
+    <artifactId>maven-oap-dictionary</artifactId>
 
     <parent>
         <groupId>oap</groupId>
@@ -40,15 +40,18 @@
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-json</artifactId>
-            <version>${project.parent.version}</version>
+            <artifactId>oap-dictionary</artifactId>
+            <version>1.15.16</version>
         </dependency>
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.4</version>
         </dependency>
     </dependencies>
 </project>
