--- a/maven/oap-application-maven/pom.xml
+++ b/maven/oap-application-maven/pom.xml
@@ -26,57 +26,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-dictionary-maven-plugin</name>
-    <artifactId>oap-dictionary-maven-plugin</artifactId>
-
+    <name>oap-application-maven</name>
+    <artifactId>oap-application-maven</artifactId>
     <packaging>maven-plugin</packaging>
 
     <parent>
         <groupId>oap</groupId>
-        <artifactId>oap</artifactId>
-        <version>1.16.1</version>
+        <artifactId>oap-maven-plugin</artifactId>
+        <version>1.16.2</version>
     </parent>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-dictionary</artifactId>
+            <artifactId>oap-application</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>3.3.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
