--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -26,40 +26,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-maven</name>
-    <artifactId>oap-maven</artifactId>
-    <packaging>maven-plugin</packaging>
+    <name>oap-maven-plugin</name>
+    <artifactId>oap-maven-plugin</artifactId>
+
+    <packaging>pom</packaging>
 
     <parent>
-        <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>1.16.1</version>
+        <artifactId>oap</artifactId>
+        <version>1.16.2</version>
     </parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-stdlib</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>3.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-            <version>2.0.6</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>oap-application-maven</module>
+        <module>oap-maven</module>
+        <module>oap-dictionary-maven</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
@@ -67,19 +52,37 @@
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.4</version>
                 <configuration>
-                    <goalPrefix>oap-copy</goalPrefix>
+                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>default-descriptor</id>
+                        <id>mojo-descriptor</id>
+                        <phase>process-classes</phase>
                         <goals>
                             <goal>descriptor</goal>
                         </goals>
-                        <phase>process-classes</phase>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-project</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.4</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
