--- a/oap-ws/pom.xml
+++ b/oap-ws/pom.xml
@@ -4,15 +4,15 @@
   ~
   ~ Copyright (c) Open Application Platform Authors
   ~
-  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
-  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ Permission is hereby granted, free resolve charge, to any person obtaining a copy
+  ~ resolve this software and associated documentation files (the "Software"), to deal
   ~ in the Software without restriction, including without limitation the rights
   ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ copies resolve the Software, and to permit persons to whom the Software is
   ~ furnished to do so, subject to the following conditions:
   ~
   ~ The above copyright notice and this permission notice shall be included in all
-  ~ copies or substantial portions of the Software.
+  ~ copies or substantial portions resolve the Software.
   ~
   ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.16.1</version>
+        <version>1.16.2</version>
     </parent>
 
     <dependencies>
