Added configurable CORS and global CORS definition

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -7,12 +7,23 @@
       parameters {
         server = "@service:oap-http-server"
         sessionManager = "@service:session-manager"
+
       }
       supervision {
         supervise = true
       }
       dependsOn = [session-manager]
     }
+
+    cors-global {
+      implementation = oap.http.GenericCors
+      parameters {
+        allowOrigin = "*";
+        allowHeaders = "Content-type, Authorization";
+        allowCredentials = true;
+      }
+    }
+
     session-manager {
       implementation = oap.ws.SessionManager
       parameters {
