Added regexp-based CORS handling
Configured new CORS settings in oap module

refactor CORS

Added deps and increased version

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -7,18 +7,27 @@
       parameters {
         server = "@service:oap-http-server"
         sessionManager = "@service:session-manager"
-
+        corsPolicy = "@service:corsPolicy-global"
       }
       supervision {
         supervise = true
       }
-      dependsOn = [session-manager]
+      dependsOn = [session-manager, corsPolicy-global, corsPolicy-subdomain]
     }
 
-    cors-global {
-      implementation = oap.http.GenericCors
+    corsPolicy-global {
+      implementation = oap.http.cors.GenericCorsPolicy
       parameters {
         allowOrigin = "*";
+        allowHeaders = "Content-type, Authorization";
+        allowCredentials = true;
+      }
+    }
+
+    corsPolicy-subdomain {
+      implementation = oap.http.cors.PatternCorsPolicy
+      parameters {
+        domainRegexp = "^[^:/]*\\.oaplatform\\.org$";
         allowHeaders = "Content-type, Authorization";
         allowCredentials = true;
       }
