Fixed depends on namings

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -12,7 +12,7 @@
       supervision {
         supervise = true
       }
-      dependsOn = [session-manager, corsPolicy-global, corsPolicy-subdomain]
+      dependsOn = [session-manager, corsPolicy-generic, corsPolicy-subdomain]
     }
 
     corsPolicy-generic {
