Removed redundant semicolons causing literals to be parsed as strings

--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -18,18 +18,18 @@
     corsPolicy-generic {
       implementation = oap.http.cors.GenericCorsPolicy
       parameters {
-        allowOrigin = "*";
-        allowHeaders = "Content-type, Authorization";
-        allowCredentials = true;
+        allowOrigin = "*"
+        allowHeaders = "Content-type, Authorization"
+        allowCredentials = true
       }
     }
 
     corsPolicy-subdomain {
       implementation = oap.http.cors.PatternCorsPolicy
       parameters {
-        domainRegexp = "^[^:/]*\\.oaplatform\\.org$";
-        allowHeaders = "Content-type, Authorization";
-        allowCredentials = true;
+        domainRegexp = "^[^:/]*\\.oaplatform\\.org$"
+        allowHeaders = "Content-type, Authorization"
+        allowCredentials = true
       }
     }
 
