--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -45,7 +45,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.17.1</version>
+        <version>1.17.2</version>
     </parent>
 
     <dependencies>
@@ -137,6 +137,10 @@
             <groupId>net.jpountz.lz4</groupId>
             <artifactId>lz4</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
