--- a/oap-etl/pom.xml
+++ b/oap-etl/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.17.21</version>
+        <version>1.18.0</version>
     </parent>
 
     <dependencies>
@@ -45,6 +45,11 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-json</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-tsv</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
